# VaXil

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  LICENSE  NOTICE  README.md  build.bat  build.sh  ddg_github_lc2cDw.html  ddg_lc2cDw.html  desktop.ini  orb  orb helper  orb.glsl  vcpkg.json
cmake/: CleanDeployDir.cmake
config/: identity.json
docs/: ARCHITECTURE.md  BUILD.md  CONFIGURATION.md  CRASH_DIAGNOSTICS.md  DISTRIBUTED_VISION_ARCHITECTURE.md  LEARNING_DATA_COLLECTION.md  RELEASE_v1.0.0.md  VISION_MESSAGE_SCHEMA.json  VOICE_PIPELINE_NEXT_PHASE.md  identity.md
docs/LMStudio-OpenAI-Compatibility-Endpoints/: chat-completions.md  completions.md  embeddings.md  models.md  overview.md  responses.md  structured-output.md  tools.md
python_runtime/: README.md  requirements.txt  vaxil_python_runtime.spec
python_runtime/vaxil_runtime/: __init__.py  main.py  playwright_manager.py  runtime_types.py  service.py
scripts/: bootstrap_python_runtime.ps1  bootstrap_voice_stack.ps1  check_file_caps.py  package_linux_appimage.sh
src/agent/: AgentToolbox.cpp  AgentToolbox.h
src/ai/: AiBackendClient.h  LmStudioClient.cpp  ModelCatalogService.cpp  ModelCatalogService.h  OpenAiCompatibleClient.cpp  OpenAiCompatibleClient.h  PromptAdapter.cpp  PromptAdapter.h  RuntimeAiBackendClient.cpp  RuntimeAiBackendClient.h  SpokenReply.cpp  SpokenReply.h
src/app/: JarvisApplication.cpp  JarvisApplication.h  jarvis.rc  main.cpp  vaxil.rc
src/audio/: AudioInputService.cpp  AudioInputService.h  AudioProcessingChain.cpp  AudioProcessingChain.h  AudioProcessingTypes.h  SileroVadSession.cpp
src/behavior_tuning/: CompiledContextPolicyTuningPromotionPolicy.cpp  CompiledContextPolicyTuningPromotionPolicy.h  FeedbackSignalEventBuilder.cpp  FeedbackSignalEventBuilder.h  TuningEpisodeFeedbackScorer.cpp  TuningEpisodeFeedbackScorer.h
src/cognition/: CompiledContextHistorySummaryBuilder.cpp  CompiledContextHistorySummaryBuilder.h  CompiledContextLayeredSignalBuilder.cpp  CompiledContextPolicyEvolutionBuilder.cpp  CompiledContextPolicyEvolutionBuilder.h  CompiledContextPolicyTuningSignalBuilder.cpp  CompiledContextPolicyTuningSignalBuilder.h  CompiledContextStabilityMemoryBuilder.cpp  CompiledContextStabilityMemoryBuilder.h  ConnectorEventBuilder.cpp  ConnectorEventBuilder.h  ConnectorResultSignal.cpp  ConnectorResultSignal.h  CooldownEngine.cpp  CooldownEngine.h  DesktopContextSelectionBuilder.cpp  DesktopContextSelectionBuilder.h  FocusModePolicy.cpp  FocusModePolicy.h  ProactiveCooldownTracker.cpp  ProactiveCooldownTracker.h  ProactiveSpeechPolicy.cpp  ProactiveSpeechPolicy.h  ProactiveSuggestionGate.cpp  ProactiveSuggestionGate.h  ProactiveSuggestionPlanner.cpp  ProactiveSuggestionPlanner.h  ProactiveSurfaceGate.cpp  ProactiveSurfaceGate.h  SelectionContextCompiler.cpp  SelectionContextCompiler.h  SuggestionProposalBuilder.cpp  SuggestionProposalBuilder.h  SuggestionProposalPolicyScoring.cpp  SuggestionProposalPolicyScoring.h  SuggestionProposalRanker.cpp  SuggestionProposalRanker.h
src/connectors/: CalendarIcsEventBuilder.cpp  CalendarIcsEventBuilder.h  CalendarIcsMonitor.cpp  CalendarIcsMonitor.h
src/core/: ActionThreadSelectionPolicy.cpp  AiRequestCoordinator.cpp  AiRequestCoordinator.h  AssistantBehaviorPolicy.cpp  AssistantController.cpp  AssistantController.h  AssistantRequestLifecyclePolicy.cpp  AssistantRequestLifecyclePolicy.h  AssistantTypes.h  ComputerControl.cpp  CurrentContextReferentResolver.cpp  CurrentContextReferentResolver.h  InputRouter.cpp  InputRouter.h  IntentRouter.cpp  IntentRouter.h  ListeningEngagementPolicy.cpp  ListeningEngagementPolicy.h  LocalResponseEngine.cpp  LocalResponseEngine.h  MemoryPolicyHandler.cpp  MemoryPolicyHandler.h  ResponseFinalizer.cpp  ResponseFinalizer.h  ToolCoordinator.cpp  ToolCoordinator.h  TurnOrchestrationRuntime.cpp  TurnOrchestrationTypes.h
src/diagnostics/: CrashBreadcrumbTrail.cpp  CrashBreadcrumbTrail.h  CrashDiagnosticsService.cpp  CrashDiagnosticsService.h  CrashReportWriter.cpp  CrashReportWriter.h  StartupMilestones.cpp  StartupMilestones.h  VaxilErrorCodes.cpp  VaxilErrorCodes.h
src/gui/: AgentViewModel.cpp  AgentViewModel.h  BackendFacade.cpp  BackendFacade.h  SettingsViewModel.cpp  SettingsViewModel.h  resources.qrc
src/learning_data/: LearningDataCollector.cpp  LearningDataCollector.h  LearningDataSettings.cpp  LearningDataSettings.h  LearningDataStorage.cpp  LearningDataStorage.h  LearningDataTypes.h
src/logging/: LoggingService.cpp  LoggingService.h
src/memory/: MemoryManager.cpp  MemoryStore.cpp  MemoryStore.h  (+4 more)
src/skills/: SkillStore.h  (+1 more)
tests/: AgentToolLoopGuardTests.cpp  AiServicesTests.cpp  AppSettingsTests.cpp  AssistantBehaviorPolicyTests.cpp  BehavioralEventLedgerTests.cpp  CompiledContextHistorySummaryBuilderTests.cpp  CompiledContextPolicyTuningPromotionPolicyTests.cpp  CompiledContextStabilityMemoryBuilderTests.cpp  ConnectorEventBuilderTests.cpp  ConnectorResultSignalTests.cpp  CooldownEngineTests.cpp  CrashBreadcrumbTrailTests.cpp  CrashReportWriterTests.cpp  CurrentContextReferentResolverTests.cpp  DesktopBleIdentityAdapterTests.cpp  DesktopContextSelectionBuilderTests.cpp  DesktopContextThreadBuilderTests.cpp  FeedbackSignalEventBuilderTests.cpp  FocusModeExpiryRuntimeTests.cpp  IdentityProfileTests.cpp  IntentIntelligenceTuningTests.cpp  LearningDataCollectorTests.cpp  ListeningEngagementPolicyTests.cpp  LocalResponseEngineTests.cpp  LoggingFatalFlushTests.cpp  MemoryManagerTests.cpp  MemoryPolicyHandlerTests.cpp  MemoryStoreTests.cpp  PermissionOverrideScenarioTests.cpp  PlatformRuntimeTests.cpp  ProactiveActionCooccurrenceHappyPathScenarioTests.cpp  ProactiveActionCooccurrencePolicyMatrixTests.cpp  ProactiveActionCooccurrenceScenarioTests.cpp  ProactiveActionFocusModePolicyRegressionTests.cpp  ProactivePlannerInputEnricherTests.cpp  ProactiveSuggestionGateTests.cpp  ProactiveSuggestionLoopScenarioTests.cpp  ProactiveSurfaceGateTests.cpp  PythonRuntimeTests.cpp  ResponseFinalizerTests.cpp  (+15 more)
vision_node/: README.md  main.py  requirements.txt  run_vision_node.sh  schema.py  service.py
(+163 files in other folders)
